# HexahedralFiniteElementModelGenerator

./: .gitignore  CMakeLists.txt  README.md
include/: CreateHexahedral.h  Definitions.h  FEAModeller.h  GrayValues.h  HashTable.h  InpWriter.h  Octree.h  PrimitiveTypes.h  ResizeVoxels.h  VTKVoxelRenderer.h  Vec3.h  VoxelGrid.h  glmafx.h
model/: TCM_Glenoid.txt
source/: CreateHexahedral.cpp  FEAModeller.cpp  GrayValues.cpp  InpWriter.cpp  Octree.cpp  ResizeVoxels.cpp  VTKVoxelRenderer.cpp  VoxelGrid.cpp  main.cpp
